# messages

./: .coverage  .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: api.rst  cli.rst  conf.py  contributing.rst  index.rst  todo.rst
docs/_build/doctrees/: api.doctree  cli.doctree  config.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  todo.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  api.html  cli.html  config.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  todo.html  tutorial.html
docs/_build/html/_sources/: config.rst.txt  installation.rst.txt  tutorial.rst.txt
examples/: example_email.py  example_slackWebHook.py  example_text.py
messages/: __init__.py  _config.py  _eventloop.py  _exceptions.py  _interface.py  _utils.py  api.py  chat.py  cli.py  config.py  email.py  email_.py  eventloop.py  exceptions.py  facebook.py  slack.py  telegram.py  text.py  utils.py  whatsapp.py
tests/: conftest.py  pytest.ini  test_api.py  test_cli.py  test_config.py  test_email.py  test_eventloop.py  test_exceptions.py  test_facebook.py  test_interface.py  test_slack.py  test_telegram.py  test_text.py  test_utils.py  test_whatsapp.py
tests/data/: file1.txt  file4.xlsx
tests/integration/: test_int_email.py  test_int_slack.py  test_int_telegram.py  test_int_text.py  test_int_whatsapp.py
tests/integration_tests/: README.md  int_setup.py  test_int_email.py  test_int_slack.py  test_int_telegram.py  test_int_text.py  test_int_whatsapp.py  test_text_api.py
