[tool.poetry]
name = "messages"
version = "0.5.0"
description = "Easy and efficient messaging."
authors = ["Tim Phillips <phillipstr@gmail.com>"]
repository = "https://github.com/trp07/messages"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Email",
    "Topic :: Education :: Testing",
    "Topic :: License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"
click = "^7.0"
jsonconfig-tool = "^1.5"
validus = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
pytest-mock = "^1.10"
black = "18.9b0"

[tool.poetry.scripts]
messages = "messages.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
