[tool.poetry]
name = "messages"
version = "0.7.2"
description = "Easy and efficient messaging."
readme = "README.md"
authors = ["Tim Phillips <phillipstr@gmail.com>"]
repository = "https://github.com/trp07/messages"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Email",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
include = ["CHANGES.md"]

[tool.poetry.dependencies]
python = "^3.7"
validus = "^0.3.0"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
pytest-mock = "^1.10"
pytest-httpx = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
